--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             }else if(result.weather[0].main=='Mist'){
                 weathericon.src="images/mist.png"
             }else{
-                weathericon.src="images/rain.png"
+                weathericon.src="images/mist.png"
             }
             weather.style.display="block";
             err.innerHTML="";
